src/app/register-page/register-page.component.scss
$orange: #fe5517;
$ice: #f0f0e6;
$blue: #5251a2;

header {
  padding: 16px;
  background-color: $ice;
  height: 80px;
}
nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: 0 16px;

  img {
    width: 200px;
  }
}
#container {
  width: 100%;
  background-color: $ice;
  padding: 0px 8px;
  display: flex;
  justify-content: space-around;
  align-items: flex-start;
  flex-wrap: wrap;
  form {
    margin-top: 8px;
    display: flex;
    padding: 32px;
    flex-direction: column;
    max-width: 380px;
    max-height: 320px;
    background-color: #ffff;
    color: $orange;
    box-shadow: 0px 5px 6px 0px rgba(6, 6, 31, 0.3);
    h1 {
      text-align: center;
      font-weight: bold;
    }
    .form-btn {
      display: flex;
      justify-content: flex-end;
    }
    button {
      margin: 0px 0px 0px 8px;
      padding: 0px 32px;
    }
    .mat-stroked-button {
      border: 1px solid $orange;
      border-radius: 0px;
    }
  }
  .register-tittle {
    font: 500 "Roboto", "sans-serif";
    max-width: 500px;
    color: $blue;
    display: flex;
    justify-items: center;
    align-items: center;
    flex-direction: column;
    background-color: $ice;
    h1 {
      text-align: left;
      font-weight: bold;
      font-size: 40px;
    }
    p {
      font-size: 24px;
      line-height: 30px;
      letter-spacing: 0.15px;
    }
    img {
      margin: 32px 0px;
      width: 300px;
    }
  }
}
@media only screen and (max-width: 767px) {
  header {
    display: flex;
    justify-content: center;
    width: 100%;
    border-bottom: 2px solid rgba(0, 0, 0, 0.25);
    img {
      width: 100px;
    }
  }
  #container {
    form {
      margin-top: 8px;
      padding: 16px;
      width: 270px;
    }
    .register-tittle {
      margin-top: 16px;
      padding: 32px;
      max-width: 260px;

      img {
        margin: 16px;
        width: 300px;
      }
    }
  }
}

